<resources>
    <string name="app_name">BlackJack FR</string>
    <string name="config_item">Options</string>
    <string name="bankTitle">Banque</string>
    <string name="playerTitle">Joueur</string>
    <string name="bankScore">Score banque :</string>
    <string name="playerScore">Score joueur :</string>
    <string name="DrawButton">Piocher une carte</string>
    <string name="EndButton">Finir tour</string>
    <string name="ResetButton">Réinitialiser</string>
    <string name="NoMoreCardException">Pas assez de cartes</string>
    <string name="DialogBoxTitle">Configuration Blackjack</string>
    <string name="GreenBackgroundchoice">Fond vert</string>
    <string name="DarkBackgroundchoice">Fond noir</string>
    <string name="ResetChoiceDialog">Annuler</string>
    <string name="ValidateChoiceDialog">Valider</string>
    <string name="RefillDeck">Remplir le deck</string>
    <string name="menu_item_en_lang">English</string>
    <string name="menu_item_fr_lang">Français</string>
    <string name="nbDeck">Nombre de jeux de 52 cartes</string>
    <string name="nbMontant">Montant initial</string>
    <string name="PlayerAmmount">Votre montant :</string>
    <string name="PlayerBet">Votre mise :</string>
    <string name="BetButton">Miser</string>
</resources>