<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.MainActivity"
    android:background="#00574a"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/drawButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/DrawButton" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/EndButton" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ResetButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bankHand"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankTitle"/>

    <TextView
        android:id="@+id/bankTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/bankTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/playerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/playerTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankStatusLayout" />

    <TextView
        android:id="@+id/bankScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/bankScore"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bankStatusLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bankStatusLayout" />

    <TextView
        android:id="@+id/totalAmmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayerAmmount"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/playerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerTitle"
        app:layout_constraintTop_toTopOf="@+id/playerTitle" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/playerScore"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/playerStatusLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playerStatusLayout" />

    <TextView
        android:id="@+id/betAmmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayerBet"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/betBar"
        app:layout_constraintEnd_toEndOf="@+id/betBar"
        app:layout_constraintStart_toStartOf="@+id/betBar"
        app:layout_constraintTop_toTopOf="@+id/betButton" />

    <LinearLayout
        android:id="@+id/playerHand"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTitle"></LinearLayout>

    <LinearLayout
        android:id="@+id/playerStatusLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerScore"
        app:layout_constraintTop_toBottomOf="@+id/playerHand" />

    <LinearLayout
        android:id="@+id/bankStatusLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bankScore"
        app:layout_constraintTop_toBottomOf="@+id/bankHand"></LinearLayout>

    <SeekBar
        android:id="@+id/betBar"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="166dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:indeterminate="false"
        android:max="300"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@+id/betButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/betButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/BetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/betBar"
        app:layout_constraintTop_toBottomOf="@+id/playerStatusLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>