<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diag_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioBgGroup"
        android:layout_width="414dp"
        android:layout_height="33dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/greenBgButton"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/GreenBackgroundchoice" />

        <RadioButton
            android:id="@+id/blackBgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DarkBackgroundchoice" />
    </RadioGroup>

    <EditText
        android:id="@+id/montanTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/nbDeckText"
        app:layout_constraintStart_toStartOf="@+id/nbDeckText"
        app:layout_constraintTop_toBottomOf="@+id/nbDeckText" />

    <EditText
        android:id="@+id/montantMiseEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/montantText"
        app:layout_constraintStart_toStartOf="@+id/montantText"
        app:layout_constraintTop_toBottomOf="@+id/montantText" />

    <TextView
        android:id="@+id/nbDeckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nbDeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioBgGroup" />

    <TextView
        android:id="@+id/montantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nbMontant"
        app:layout_constraintEnd_toEndOf="@+id/montanTextview"
        app:layout_constraintStart_toStartOf="@+id/montanTextview"
        app:layout_constraintTop_toBottomOf="@+id/montanTextview" />
</androidx.constraintlayout.widget.ConstraintLayout>